# SPDX-FileCopyrightText: 2021 Andrew 'glyph' Reid
#
# SPDX-License-Identifier: Unlicense

[package]
name = "bipf-rs"
version = "0.1.0"
authors = ["Andrew Reid <glyph@mycelial.technology>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
